Add GetMatchlinksId
